--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif; 
+    margin: 0%;
 }
 h1{
     font-size: 50px;
@@ -15,7 +16,7 @@ section{
     padding: 5%;
 }
 .half img{
-    width: 90%;
+    width: 100%;
 }
 .link-batton{
     text-decoration: none;
@@ -25,4 +26,8 @@ section{
     border-radius: 5px;
     font-weight: 700;
     
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+background-repeat: no-repeat;
 }
